patch: fix missing background image issue

--- a/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_hero.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockroom/modules/_hero.scss
@@ -8,6 +8,7 @@
         background-position: center;
         background-size: cover;    
         color:white;
+        background-color: $skrm-pink
     }
 
     &__background {
